# xotodo

./: .gitignore  README.md  file-parser.test.ts  file-parser.ts  github.ts  main.ts  server.ts  store.ts  test.md  todo.ts  watcher.ts  xotodo-store.test.ts
.context/: medium-com-c8cdqy52dpj.yml  medium-com-ouh99f7v2s.yml  medium-com-p10p4vdd4xs.yml
scripts/: store-migration.ts
web/: api.js  api.ts  index.html  index.js  main.js  main.ts  render.js  render.ts  socket.js  style.css
web/.context/: css-tricks-com-9oqynijt9wi.yml
xotodo-backend/: Cargo.toml
xotodo-backend/src/: lib.rs
xotodo-edit/: Cargo.toml  Trunk.toml  index.html  style.css
xotodo-edit/src/: main.rs
xotodo-parser/: Cargo.toml
xotodo-parser-lib/: Cargo.toml
xotodo-parser-lib/src/: lib.rs
xotodo-parser/src/: lib.rs  optional_naive_date_format.rs  utc_date_format.rs
xotodo-parser/src/.context/: serde-rs-dcsx2kgvutt.yml  stackoverflow-com-3o6bu3oifzz.yml
xotodo-store/: Cargo.toml
xotodo-store/src/: lib.rs  optional_naive_date_format.rs  utc_date_format.rs
xotodo-store/src/.context/: serde-rs-zojor1x5vm.yml
