[package]
name = "xotodo-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
