[package]
name = "xotodo-parser"
version = "0.1.0"
edition = "2021"
authors= ["Roy Rutishauser <roy.rutishauser@gmail.com>"]
description = "todo parsing in files"
license = "MIT/Apache-2.0"
repository = "https://github.com/royru/xotodo"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
xotodo-parser-lib = { path = "../xotodo-parser-lib" }