[package]
name = "xotodo-store"
version = "0.1.0"
edition = "2021"
authors= ["Roy Rutishauser <roy.rutishauser@gmail.com>"]
description = "todo parsing in files"
license = "MIT/Apache-2.0"
repository = "https://github.com/royru/xotodo"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
# js-sys = "0.3.55"
# sled = "0.34"